# picoEpaperClock

./: CMakeLists.txt  Makefile  README.md  go.mod  go.sum  main.c  main.go
examples/: EPD_2in13bc_test.c  EPD_Test.h
